--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ title: "Home"
 layout: default
 pagination:
     enabled: true
-description: "Alternative Lifestyles"
+description: "Work at Home"
 ---
 
 
